TestSuite/PascalABCTests/errors/err0079.pas
  	 var p : procedure;

procedure Test;
procedure Nested;
begin
end;

begin
p := Nested;
end;

begin

end.